Add upgrade voting api
