# docs/swagger.yaml
@@ -120,6 +120,7 @@ definitions:
           - Snapshot
           - OfflinePropose
           - OfflineCommit
+          - NewGenesis
           type: string
         type: array
       fullSize:
@@ -138,6 +139,8 @@ definitions:
         example: "2020-01-01T00:00:00Z"
         type: string
       txCount:
+        type: integer
+      upgrade:
         type: integer
       validatorsCount:
         type: integer
@@ -165,6 +168,7 @@ definitions:
           - Snapshot
           - OfflinePropose
           - OfflineCommit
+          - NewGenesis
           type: string
         type: array
       fullSize:
@@ -183,6 +187,8 @@ definitions:
         example: "2020-01-01T00:00:00Z"
         type: string
       txCount:
+        type: integer
+      upgrade:
         type: integer
       vrfProposerThreshold:
         type: number
@@ -3465,4 +3471,39 @@ paths:
           description: Service unavailable
       tags:
       - Transaction
+  /Upgrades:
+    get:
+      operationId: Upgrades
+      parameters:
+      - description: items to take
+        in: query
+        name: limit
+        required: true
+        type: integer
+      - description: continuation token to get next page items
+        in: query
+        name: continuationToken
+        type: string
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/ResponsePage'
+            - properties:
+                result:
+                  items:
+                    $ref: '#/definitions/BlockSummary'
+                  type: array
+              type: object
+        "400":
+          description: Bad request
+        "429":
+          description: Request number limit exceeded
+        "500":
+          description: Internal server error
+        "503":
+          description: Service unavailable
+      tags:
+      - Upgrades
 swagger: "2.0"
